--- a/16/00/biology/CMakeLists.txt
+++ b/16/00/biology/CMakeLists.txt
@@ -1,4 +1,3 @@
-my_add_target(biology STATIC)
-#file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp include/*.h)
-#add_library(biology STATIC ${srcs})
-#target_include_directories(biology PUBLIC include)
+file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp include/*.h)
+add_library(biology STATIC ${srcs})
+target_include_directories(biology PUBLIC include)
